# opencode-visual-debugger

./: .gitignore  README.md  pyproject.toml
docs/plans/: implementation-plan.md
src/visual_debugger/: __init__.py  analyzer.py  capture.py  cli.py  server.py  window.py
tests/: conftest.py  test_analyzer.py  test_capture.py  test_window.py
